src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Budget_Available__c</fullName>
        <label>Budget Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Insight__c</fullName>
        <description>CRM-MC-ESPSFDCQI-7101</description>
        <inlineHelpText>Known information about the client budget</inlineHelpText>
        <label>Budget Insight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Depends on entry in Main Delivery Country. Classify the Region within the main delivery country, if necessary.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>US/Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Use_Case__c</fullName>
        <description>CRM_MC-ESPSFDCQI-7101</description>
        <inlineHelpText>Is there a strategic reason for this opportunity beyond BAU?</inlineHelpText>
        <label>Business Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEQActiveRelease__c</fullName>
        <label>CEQActiveRelease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CES_GBU_Tech_Product_included__c</fullName>
        <description>ESPSFDCQI-13673</description>
        <inlineHelpText>You are requested to insert whether Technology provided by CES GBU is included within your proposal</inlineHelpText>
        <label>CES GBU Tech Product included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSMS_Product_Amount__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8232</description>
        <label>CSMS Product Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Offering_Segment__c</field>
            <operation>equals</operation>
            <value>Commercial Solutions</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Business_Area__c</field>
            <operation>equals</operation>
            <value>Commercial Engagement Services</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Text__c</field>
            <operation>equals</operation>
            <value>Contract Sales &amp; Medical Solutions</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSMS_Product__c</fullName>
        <description>ESPCRMINT-379</description>
        <label>CSMS Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Offering_Segment__c</field>
            <operation>equals</operation>
            <value>Commercial Solutions</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Business_Area__c</field>
            <operation>equals</operation>
            <value>Commercial Engagement Services</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Text__c</field>
            <operation>equals</operation>
            <value>Contract Sales &amp; Medical Solutions</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>C_S_Contract_Value__c</fullName>
        <description>Contract value of all C&amp;S components</description>
        <inlineHelpText>Contract value of all C&amp;S components</inlineHelpText>
        <label>C&amp;S Contract Value</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Material_Type_Text__c</field>
            <operation>equals</operation>
            <value>ZREP</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Central_Billing_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if Opportunity&apos;s Engagement is a Central Billing Engagement (IMS AG) only</description>
        <inlineHelpText>This field is set to true if Opportunity&apos;s Engagement is a Central Billing Engagement (IMS AG) only</inlineHelpText>
        <label>Central Billing Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Order_Number__c</fullName>
        <description>ESPSFDCQI-12752</description>
        <inlineHelpText>Please input the number of the change order this is related to on the parent (i.e. 1,2, 3, etc.)</inlineHelpText>
        <label>Change Order Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>WO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Opportunity__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2929</description>
        <formula>NOT(ISBLANK(Parent_Opportunity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clari_Close_Date__c</fullName>
        <formula>if(
    NOT(isBLANK(Awarded_Date__c)),Awarded_Date__c,if(NOT(isBLANK(Lost_Date__c)),Lost_Date__c,CloseDate)
)</formula>
        <label>Clari Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Insight__c</fullName>
        <description>CRM-MC-ESPSFDCQI-7101</description>
        <inlineHelpText>Decision maker / influencer</inlineHelpText>
        <label>Client Contact Insight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <description>ESPSFDCQI-9859</description>
        <inlineHelpText>New = 1. Brand new client 2. Client that hasn&apos;t had an open contract in 12+ months OR Existing client that buys a new product line.</inlineHelpText>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_And_ECD_LOB_Dynamic_Formula__c</fullName>
        <description>ESPSFDCQI-16237</description>
        <formula>OR(
    ISPICKVAL(Line_of_Business__c , &quot;Clinical&quot;),
    ISPICKVAL(Line_of_Business__c , &quot;Early Clinical Development&quot;)
)</formula>
        <label>Clinical And ECD LOB Dynamic Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clozd_Survey_Url__c</fullName>
        <description>ESPSFDCQI-17465</description>
        <label>Clozd Survey Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Commercial_Tech_Product_Count__c</fullName>
        <description>ESPSFDCQI-7994</description>
        <label>Commercial Tech Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Business_Area__c</field>
            <operation>equals</operation>
            <value>Commercial Tech</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Dates_Confirmed__c</fullName>
        <description>CRM-MC-ESPSFDCQI-9674</description>
        <inlineHelpText>To confirm Contract Start Date and Contract End Date when Opportunity Stage = 7a. Closed Won</inlineHelpText>
        <label>Contract Dates Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-11_The actual contract End Date (for multi-years this should always be the Contract dates and not change annually in case of a renewal)</description>
        <inlineHelpText>The actual contract End Date (for multi-years this should always be the Contract dates and not change annually in case of a renewal)</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-11_The actual contract Start Date (for multi-years this should always be the Contract dates and not change annually in case of a renewal)</description>
        <inlineHelpText>The actual contract Start Date (for multi-years this should always be the Contract dates and not change annually in case of a renewal)</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Period</fullName>
                </value>
                <value>
                    <fullName>Multi-Period</fullName>
                </value>
                <value>
                    <fullName>Multi Period</fullName>
                    <isActive>false</isActive>
                    <label>Multi Period</label>
                </value>
                <value>
                    <fullName>Single Period</fullName>
                    <isActive>false</isActive>
                    <label>Single Period</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Master Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_Opportunity_Estimate__c</fullName>
        <description>ESPSFDCQI-16396</description>
        <formula>Avacare_Enrollment_Goal__c * PPC_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Opportunity Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_To_USD__c</fullName>
        <label>Conversion Rate To USD</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Approvers__c</fullName>
        <label>Current Approvers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Profile__c</fullName>
        <description>ESPSFDCQI-15607</description>
        <formula>$Profile.Name</formula>
        <label>Current User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_Opportunity_Id__c</fullName>
        <description>DMD integration</description>
        <externalId>true</externalId>
        <label>DMD Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMD_Variable_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-13814: Determine if opportunity is equivalent to primary Quote of Variable billing opportunity in DMD System</description>
        <label>DMD Variable Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Platform__c</fullName>
        <description>CRM-MC-SPSFDCQI-5130</description>
        <label>DM Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Rave EDC</fullName>
                </value>
                <value>
                    <fullName>InForm</fullName>
                </value>
                <value>
                    <fullName>InForm Direct</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>Viedoc</fullName>
                </value>
                <value>
                    <fullName>OC RDC</fullName>
                </value>
                <value>
                    <fullName>Medrio</fullName>
                </value>
                <value>
                    <fullName>IBM CD</fullName>
                    <isActive>false</isActive>
                    <label>IBM CD</label>
                </value>
                <value>
                    <fullName>Zelta</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Veeva</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTL_Location__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5130</description>
        <label>DTL Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China (Mainland)</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Operations_Location__c</fullName>
        <description>ESPSFDCQI-13469</description>
        <label>Data Operations Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China (Mainland)</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_in_Stage_Points__c</fullName>
        <description>ESPCRMINT-125</description>
        <formula>CASE (1 , IF(AND(Stage_Duration__c &gt;=0,Stage_Duration__c &lt;=25) , 1, 0), 10,
IF(AND(Stage_Duration__c &gt;25,Stage_Duration__c &lt;=50) , 1, 0), 8,
IF(AND(Stage_Duration__c &gt;50,Stage_Duration__c &lt;=75) , 1, 0), 6,
IF(AND(Stage_Duration__c &gt;75,Stage_Duration__c &lt;=100) , 1, 0), 4,
IF(AND(Stage_Duration__c &gt;100,Stage_Duration__c &lt;=150) , 1, 0), 2,
IF(Stage_Duration__c &gt;150 , 1, 0), 0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Stage Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Final_Approval_Date__c</fullName>
        <description>ESPSFDCQI-9274,ESPSFDCQI-16359</description>
        <label>Deal Desk SOW Approval Date Del</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Initial_Approval_Date__c</fullName>
        <description>ESPSFDCQI-9274,ESPSFDCQI-16359</description>
        <label>Deal Desk Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Request_Type__c</fullName>
        <description>ESPSFDCQI-9274</description>
        <label>Deal Desk Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Desk_Status__c</fullName>
        <description>ESPSFDCQI-9274</description>
        <label>Deal Desk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved Pricing</fullName>
                </value>
                <value>
                    <fullName>Approved SOW</fullName>
                    <isActive>false</isActive>
                    <label>Approved SOW</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Desk_Submitter__c</fullName>
        <description>ESPSFDCQI-13242</description>
        <label>Deal Desk Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Size_USD__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3995</description>
        <formula>Deal_Size__c * Conversion_Rate_To_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Size USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3995</description>
        <formula>IF(
OR(
ISPICKVAL(StageName, &apos;1. Identifying Opportunity&apos;),
ISPICKVAL(StageName, &apos;2. Qualifying Opportunity&apos;), 
ISPICKVAL(StageName, &apos;3. Developing Proposal&apos;),
ISPICKVAL(StageName, &apos;4. Delivering Proposal&apos;), 
ISPICKVAL(StageName, &apos;7b. Closed Lost&apos;)),
Amount,
IF(
OR(
ISPICKVAL(StageName, &apos;5. Finalizing Deal&apos;),
ISPICKVAL(StageName, &apos;6. Received ATP/LOI&apos;), 
ISPICKVAL(StageName, &apos;7a. Closed Won&apos;)),
Total_Project_Awarded_Price__c ,
Amount
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Scope__c</fullName>
        <description>ESPSFDCQI-6424</description>
        <label>Description of Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Contractor_Estimate__c</fullName>
        <description>CRM-MC-IQVIACBEX-964</description>
        <inlineHelpText>Opportunities created or advanced through Intake receive a Digital Contractor total value estimate based on validated data.</inlineHelpText>
        <label>Digital Contractor Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Contractor_Value__c</fullName>
        <description>CRM-MC-IQVIACBEX-997</description>
        <formula>Digital_Contractor_Estimate__c * CURRENCYRATE(text(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunities created or advanced through Intake receive a Price Modeler total value estimate based on validated data.</inlineHelpText>
        <label>Price Modeler Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-7859</description>
        <inlineHelpText>digital health: e.g. transformation, strategy, therapeutics, biomarkers, health and Disease management solutions, app development or deployment</inlineHelpText>
        <label>Digital Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Status__c</fullName>
        <label>Discount Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_with_Sales__c</fullName>
        <description>ESPSFDCQI-8566</description>
        <label>Discussed with Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_all_fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-14600</description>
        <label>Display all fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_study_include_LNS__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2692 -</description>
        <label>Does study include LNS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Classification__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2882 -</description>
        <formula>Drug_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug/Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Product_Name_With_Molecules__c</fullName>
        <description>ESPSFDCQI-14671</description>
        <label>Drug Product Name with Molecules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_Product_Name__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2690 / ESPSFDCQI-12898</description>
        <inlineHelpText>Enter client product name associated to project. Brand name preferred; generic (INN) molecule name acceptable. More than one product use &quot;multiple”. If not associated with specific product use “Asset agnostic”. Also acceptable: &quot;no product&quot; or &quot;unknown&quot;.</inlineHelpText>
        <label>Drug/Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Engagement_COE__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6161</description>
        <inlineHelpText>This Field auto populates from the Early Engagement record.  Populated if MSL or TSL were involved with customer prior to RFP. Not Applicable if no involvement.</inlineHelpText>
        <label>TSSU Early Engagement COE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Meaningful Early Engagement</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Endocrinology (Diabetes, Metabolism)</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Reproductive Health</fullName>
                </value>
                <value>
                    <fullName>Nephrology (Renal)</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases &amp; Vaccines</fullName>
                </value>
                <value>
                    <fullName>Allergy &amp; Respiratory</fullName>
                </value>
                <value>
                    <fullName>Biosimilars</fullName>
                </value>
                <value>
                    <fullName>Early Phase</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Rare Diseases</fullName>
                </value>
                <value>
                    <fullName>Cell and Gene Therapy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_period_months__c</fullName>
        <description>ESPSFDCQI-16396</description>
        <label>Enrollment period (months)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-2954</description>
        <inlineHelpText>Leader who is driving the enterprise wide (multi-product, multi-year) level sales engagement discussions.</inlineHelpText>
        <label>Enterprise Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Enterprise Lead)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>